# Monado-ALVR

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CONTRIBUTING.md  CompilerFlags.cmake  README.md  build.gradle  flake.nix  gradle.properties  gradlew  gradlew.bat  settings.gradle  vcpkg.json
.gitlab-ci/: README.md  bullseye_backports.sh  ci-containers-variables.yml.jinja  ci-containers.yml.jinja  ci-scripts.mk  ci.template  config.yml  distributions  functions.jinja  i386_and_proclamation_container_prep.sh  install-android-sdk.sh  install-ci-fairy.sh  install-cross.sh  reprepro.sh
.gitlab-ci/templates/: .gitlab-ci.yml.jinja  distributions.jinja  include.ci-containers-variables.yml.jinja  include.ci-containers.yml.jinja  include.functions.jinja  include.win_containers.yml  install-ndk.sh.jinja  reprepro.sh.jinja
.gitlab-ci/windows/: monado_deps_build.ps1
.reuse/: dep5
cmake/: CleanDirectoryList.cmake  FindHIDAPI.cmake  FindLibusb1.cmake  FindOpenGLES.cmake  Findbluetooth.cmake  FindcJSON.cmake  GenerateKhrManifest.cmake  GenerateKhrManifestInternals.cmake.in  GenerateOpenXRRuntimeManifest.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  PrefixListGlob.cmake  ProgramFilesGlob.cmake  SPIR-V.cmake  openxr_manifest.in.json  openxr_manifest.in.json.license
cmake/sanitizers/: FindSanitizers.cmake
doc/: CHANGELOG.md  Doxyfile.in  conventions.md  design-spaces.md  footer.html  frame-pacing.md  hand-tracking-mercury.md  header.html  how-to-release.md  ipc-design.md  mainpage.md  packaging-notes.md  swapchains-ipc.md  vulkan-extensions.md
doc/changes/: .proclamation.json  README.md
doc/changes/auxiliary/: mr.1081.md  mr.1128.md  mr.1203.1.md  mr.1203.2.md  mr.1265.md  mr.1270.2.md  mr.1320.md  mr.1621.md  mr.1786.md  mr.1801.1.md  mr.1809.4.md  mr.1865.1.md  mr.1865.3.md  mr.1877.1.md  mr.1885.1.md  mr.1885.2.md  mr.1894.md  mr.1896.2.md  mr.1901.md  mr.1920.1.md  mr.1920.2.md  mr.1921.md  mr.1929.md  mr.1931.md  mr.1933.md  mr.1937.1.md  mr.1937.2.md  mr.1937.3.md  mr.1937.4.md  mr.1937.5.md  mr.1937.md  mr.1940.1.md  mr.1940.2.md  mr.1940.3.md  mr.1940.4.md  mr.1940.5.md  mr.1942.1.md  mr.1942.2.md  mr.1957.1.md  mr.1957.2.md  (+78 more)
doc/changes/big/: mr.1576.md  mr.1798.md  mr.1908.md  mr.1930.md  mr.1941.md  mr.1983.md  mr.1992.md  mr.2163.md  mr.2178.md  mr.2194.md  mr.2211.md  mr.774.md  mr.873.md
doc/changes/compositor/: mr.1120.md  mr.1268.1.md  mr.1316.md  mr.1319.md  mr.1340.md  mr.1417.1.md  (+105 more)
doc/example_configs/: config_v0.mono_remote.json  config_v0.mono_remote.json.license
doc/mermaid/: swapchain_allocation_inproc.mmd  swapchain_allocation_ipc.mmd  swapchain_allocation_ipc_d3d.mmd  swapchain_allocation_ipc_xina.mmd
scripts/: codespell-project.sh  copy.bara.sky  cppwinrt.imp  eigen.imp  format-cmake.sh  format-project.sh  generate_iwyu_mapping.py  generate_iwyu_mapping_cppwinrt.py  generate_iwyu_mapping_msvc.py  generate_iwyu_mapping_windows.py  generate_oxr_ext_support.py  generate_vk_helpers.py  mapping.imp  msvc.imp  opencv.imp  run_iwyu.ps1  run_iwyu.sh  windows.imp
src/xrt/: .clang-format
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_action.c  oxr_api_body_tracking.c  oxr_api_face_tracking.c  oxr_api_face_tracking2_fb.c  oxr_api_funcs.h  oxr_api_instance.c  oxr_api_negotiate.c  oxr_api_passthrough.c  oxr_api_session.c  oxr_api_space.c  oxr_api_swapchain.c  oxr_api_verify.h  oxr_api_xdev.c  oxr_binding.c  oxr_body_tracking.c  oxr_chain.h  oxr_conversions.h  oxr_d3d.cpp  oxr_d3d11.cpp  oxr_d3d12.cpp  oxr_defines.h  oxr_dpad.c  oxr_event.c  oxr_extension_support.h  oxr_face_tracking.c  oxr_face_tracking2_fb.c  oxr_frame_sync.c  oxr_frame_sync.h  oxr_handle.h  oxr_handle_base.c  oxr_input.c  oxr_input_transform.c  oxr_input_transform.h  oxr_instance.c  oxr_logger.c  oxr_messenger.c  oxr_objects.h  oxr_passthrough.c  oxr_session.c  (+20 more)
src/xrt/targets/libmonado/: CMakeLists.txt  example.c  example.lua  example.py  libmonado.def  monado.c  monado.h  monado.py
tests/: CMakeLists.txt  aux_d3d_dxgi_formats.hpp  tests_aux_d3d_d3d11.cpp  tests_comp_client_d3d11.cpp  tests_comp_client_d3d12.cpp  tests_comp_client_opengl.cpp  tests_comp_client_vulkan.cpp  tests_cxx_wrappers.cpp  tests_deque.cpp  tests_generic_callbacks.cpp  tests_history_buf.cpp  tests_id_ringbuffer.cpp  tests_input_transform.cpp  tests_json.cpp  tests_levenbergmarquardt.cpp  tests_lowpass_float.cpp  tests_lowpass_integer.cpp  tests_main.cpp  tests_pacing.cpp  tests_pose.cpp  tests_quat_change_of_basis.cpp  tests_quat_swing_twist.cpp  tests_quatexpmap.cpp  tests_rational.cpp  tests_relation_chain.cpp  tests_uv_to_tangent.cpp  tests_vec3_angle.cpp  tests_vector.cpp  tests_worker.cpp  time_utils.hpp  vktest_init_bundle.hpp
tests/android/: .gitignore  README.md  conftest.py  test_app_switch.py  test_single_app_reliability.py
(+941 files in other folders)
